--- a/src/main/resources/templates/password-change.html
+++ b/src/main/resources/templates/password-change.html
@@ -28,49 +28,6 @@
         </div>
         <button type="submit" class="submit-btn">비밀번호 변경</button>
     </form>
-    <script>
-        const password = document.getElementById('password');
-        const passwordConfirm = document.getElementById('password-confirm');
-        const passwordInput = document.getElementById('password-group').querySelector('input');
-        const passwordConfirmInput = document.getElementById('password-confirm-group').querySelector('input');
-        const passwordCheckDiv = document.getElementById('password-check');
-        const passwordConfirmCheckDiv = document.getElementById('password-confirm-check');
-        document.querySelector('.auth-form').addEventListener('submit', e => {
-            if (passwordInput.value.length < 8) {
-                e.preventDefault(); // 폼 제출 막기
-                alert('비밀번호는 최소 8자 이상이어야 합니다.');
-                return;
-            } else if (passwordInput.value !== passwordConfirmInput.value) {
-                e.preventDefault(); // 폼 제출 막기
-                alert('비밀번호와 비밀번호 확인이 일치하지 않습니다.');
-                return;
-            }
-        });
-        passwordInput.addEventListener('input', () => {
-            if(passwordInput.value.length < 8) {
-                
-                passwordCheckDiv.textContent = '비밀번호는 최소 8자 이상이어야 합니다.';
-                passwordCheckDiv.style.color = 'red';
-                passwordInput.setCustomValidity('비밀번호는 최소 8자 이상이어야 합니다.');
-                password.classList.add('is-invalid');
-            } else {
-                passwordCheckDiv.textContent = '';
-                passwordInput.setCustomValidity('');
-                password.classList.remove('is-invalid');
-            }
-        });
-        passwordConfirmInput.addEventListener('input', () => {
-            if(passwordInput.value !== passwordConfirmInput.value) {
-                passwordConfirmCheckDiv.textContent = '비밀번호가 일치하지 않습니다.';
-                passwordConfirmCheckDiv.style.color = 'red';
-                passwordConfirmInput.setCustomValidity('비밀번호가 일치하지 않습니다.');
-                passwordConfirm.classList.add('is-invalid');
-            } else {
-                passwordConfirmCheckDiv.textContent = '';
-                passwordConfirmInput.setCustomValidity('');
-                passwordConfirm.classList.remove('is-invalid');
-            }
-        });
-    </script>
+    <script src="/script/confirm.js"></script>
 </body>
 </html>
