--- a/src/main/resources/templates/user/password-change.html
+++ b/src/main/resources/templates/user/password-change.html
@@ -28,6 +28,44 @@
         </div>
         <button type="submit" class="submit-btn">비밀번호 변경</button>
     </form>
-    <script src="/script/confirm.js"></script>
+    <script>
+        document.querySelector('.auth-form').addEventListener('submit', e => {
+            if (passwordInput.value.length < 8) {
+                e.preventDefault(); // 폼 제출 막기
+                alert('비밀번호는 최소 8자 이상이어야 합니다.');
+                return;
+            } else if (passwordInput.value !== passwordConfirmInput.value) {
+                e.preventDefault(); // 폼 제출 막기
+                alert('비밀번호와 비밀번호 확인이 일치하지 않습니다.');
+                return;
+            }
+        });
+
+        passwordInput.addEventListener('input', () => {
+            if(passwordInput.value.length < 8) {
+                
+                passwordCheckDiv.textContent = '비밀번호는 최소 8자 이상이어야 합니다.';
+                passwordCheckDiv.style.color = 'red';
+                passwordInput.setCustomValidity('비밀번호는 최소 8자 이상이어야 합니다.');
+                password.classList.add('is-invalid');
+            } else {
+                passwordCheckDiv.textContent = '';
+                passwordInput.setCustomValidity('');
+                password.classList.remove('is-invalid');
+            }
+        });
+        passwordConfirmInput.addEventListener('input', () => {
+            if(passwordInput.value !== passwordConfirmInput.value) {
+                passwordConfirmCheckDiv.textContent = '비밀번호가 일치하지 않습니다.';
+                passwordConfirmCheckDiv.style.color = 'red';
+                passwordConfirmInput.setCustomValidity('비밀번호가 일치하지 않습니다.');
+                passwordConfirm.classList.add('is-invalid');
+            } else {
+                passwordConfirmCheckDiv.textContent = '';
+                passwordConfirmInput.setCustomValidity('');
+                passwordConfirm.classList.remove('is-invalid');
+            }
+        });
+    </script>
 </body>
 </html>
