[feat] 게시글 조회 기능 구현1002 07:52

--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -111,7 +111,8 @@
         <span th:text="${id}">id</span>
         <span th:text="${role}">role</span>
 
-        <a href="/">기능 추가</a>
+        <a href="/board/list">게시판</a>
+        <a href="/">기능1</a>
 
         <form method="post" th:action="@{/logout}">
             <button type="submit">로그아웃</button>
