Sprint2 게시글 수정 관련 컨트롤러 및 html 추가 JHE

--- a/src/main/resources/templates/board/postDetail.html
+++ b/src/main/resources/templates/board/postDetail.html
@@ -47,6 +47,13 @@
                         <button class="btn btn-danger" onclick="deletePost(board.boardId)"
                                 th:if="${post.username == session.username}">삭제</button>
                     </form>
+                    <!-- 작성자 본인 또는 관리자에게만 노출 -->
+                    <a th:href="@{/board/post/{id}/edit(id=${board.id})}"
+                       class="btn btn-primary"
+                       th:if="${#authentication != null and ( #authentication.name == board.author.username
+                                or #authorization.expression('hasRole(''ADMIN'')'))}">
+                        수정
+                    </a>
                 </div>
             </div>
         </div>
