--- a/src/main/resources/templates/board/postDetail.html
+++ b/src/main/resources/templates/board/postDetail.html
@@ -43,9 +43,7 @@
                               th:if="${#authentication.name == post.username}"
                               onsubmit="return confirm('삭제하시겠습니까?');" class="d-inline">
 
-                            <input type="hidden"
-                                   th:name="${_csrf.parameterName}"
-                                   th:value="${_csrf.token}">
+                            <input type="hidden" th:if="${_csrf}" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
                             <button class="btn btn-danger" type="submit">삭제</button>
                         </form>
                         <!-- 작성자 본인에게만 노출 -->
